# kesha

./: .ghcid  .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  ci.sh  default.nix  kesha.cabal  shell.nix  stack.yaml
.github/workflows/: ci.yaml
app/: Main.hs
src/: Kesha.hs
src/Kesha/: NAR.hs
test/: Main.hs
