cabal-version: >=1.10
build-type: Simple

name: kesha
version: 0.1.0
synopsis: File hashing
description: TODO
homepage: https://github.com/jmackie/kesha
bug-reports: https://github.com/jmackie/kesha/issues
license: MIT
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
copyright: (c) 2019 Jordan Mackie
category: System
extra-source-files:
  README.md

tested-with:
  GHC ==8.6.5
  -- GHC ==8.2.* || ==8.4.* || ==8.6.*

source-repository head
  type: git
  location: git://github.com/jmackie/kesha.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -O2
  exposed-modules:
    Kesha
    Kesha.NAR
  other-modules:
    Paths_kesha
  build-depends:
    -- https://wiki.haskell.org/Base_package
    base >= 4.10.1 && < 4.13,

    binary,
    bytestring,
    containers,
    cryptohash-sha256,
    directory >= 1.3.1,
    filepath,
    hex,
    text

executable kesha
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  main-is: Main.hs
  build-depends:
    base >= 4.10.1 && < 4.13,
    bytestring,
    kesha

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts
  build-depends:
    base >= 4.10.1 && < 4.13,
    process,
    bytestring,
    kesha,
    QuickCheck,
    temporary,
    filepath,
    containers,
    directory >= 1.3.1,
    hspec
  other-modules:
  default-language: Haskell2010
