cabal-version: >=1.10
build-type: Simple

name: kesha
version: 0.1.0
synopsis: Compute the cryptographic hash of any path
description:
   A Haskell library and executable for computing the cryptographic hash of any path.

homepage: https://github.com/jmackie/kesha
bug-reports: https://github.com/jmackie/kesha/issues
license: MIT
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
copyright: (c) 2019 Jordan Mackie
category: System
extra-source-files:
  README.md

tested-with:
  GHC ==8.2.2 || ==8.4.4 || ==8.6.5

source-repository head
  type: git
  location: git://github.com/jmackie/kesha.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall 
  exposed-modules:
    Kesha
    Kesha.NAR
  build-depends:
    -- https://wiki.haskell.org/Base_package
    base >= 4.10.1 && < 4.14,

    binary,
    bytestring,
    containers,
    cryptohash-sha256,
    directory >= 1.3.1,
    filepath,
    hex,
    text

executable kesha
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  main-is: Main.hs
  other-modules: Paths_kesha
  build-depends:
    base >= 4.10.1 && < 4.14,

    bytestring,

    kesha

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts
  build-depends:
    base >= 4.10.1 && < 4.14,

    QuickCheck,
    bytestring,
    containers,
    directory >= 1.3.1,
    filepath,
    hspec,
    process,
    temporary,

    kesha
  other-modules:
  default-language: Haskell2010
