cabal-version: >=1.10
build-type: Simple

name: kesha
version: 0.2.0
synopsis: Compute the cryptographic hash of any path
description:
   A Haskell library and executable for computing the cryptographic hash of any path.

homepage: https://github.com/jmackie/kesha
bug-reports: https://github.com/jmackie/kesha/issues
license: MIT
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
copyright: (c) 2020 Jordan Mackie
category: System
extra-source-files:
  README.md

tested-with:
  GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3

source-repository head
  type: git
  location: git://github.com/jmackie/kesha.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:
    Kesha
    Kesha.NAR
  build-depends:
    -- https://wiki.haskell.org/Base_package
    -- >= 8.2.2 && < 8.9
    base >= 4.10.1 && < 4.14,

    -- boot libraries
    binary,
    bytestring,
    containers,
    -- 1.3.1.0 introduced `getSymbolicLinkTarget`
    directory >= 1.3.1,
    filepath,
    text,

    cryptohash-sha256

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts
  build-depends:
    kesha,

    base >= 4.10.1 && < 4.14,

    bytestring,
    containers,
    directory >= 1.3.1,
    filepath,
    process,

    hspec,
    QuickCheck,
    temporary
